--- a/Lesson02/solution/txtparser/package.json
+++ b/Lesson02/solution/txtparser/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "txtparser",
+  "name": "lesson01",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.ts",
+    "test": "vitest --run",
+    "test:coverage": "vitest --run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^25.2.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
+  }
 }
